kubernetes/infrastructure/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: flux-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "capacitor.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: capacitor
                port:
                  number: 9100
    - host: "capacitor.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
